--- a/index.html
+++ b/index.html
@@ -6,15 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
  
+  <link rel="stylesheet" href="css/style.css">
   <title>Chain Reaction</title>
 </head>
 
-<body>
+<body onload="draw()">
+  <div clas="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="row">
+          <div class="col-4">
+            <label for="" class="mb-0"> Enter number of rows</label>
+            <input id="row_length" class="form-control form-control-sm" type="number" placeholder="Enter row ">
+          </div>
+          <div class="col-4">
+            <label for="" class="mb-0"> Enter number of columns</label>
+            <input id="column_length" type="number"  class="form-control form-control-sm" placeholder="Enter column ">
+          </div>
+          <div class="col-4 mt-4">
+            <button type="submit" class="btn btn-primary btn-sm" onclick="getDimension();">Get Value</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-12" id="box">
+          <canvas id="main-canvas"></canvas>
 
+      </div>
+    </div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+
 </body>
 
 </html>
