Draw lines dynamically

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Chain Reaction</title>
 </head>
 
-<body onload="draw()">
+<body>
   <div clas="container">
     <div class="row">
       <div class="col-12">
@@ -29,7 +29,7 @@
         </div>
       </div>
       <div class="col-12" id="box">
-          <canvas id="main-canvas"></canvas>
+          <canvas id="main-canvas" width="600" height="600"></canvas>
 
       </div>
     </div>
