add click event; Change color of box by click

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           </div>
           <div class="col-4 mt-4">
             <button type="submit" class="btn btn-primary btn-sm" onclick="getDimension();">Get Value</button>
+            <button type="submit" class="btn btn-primary btn-sm" onclick="draw();">Reset</button>
           </div>
         </div>
       </div>
