--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div clas="container">
     <div class="row">
+      <p id="player_name"></p>
       <div class="col-12">
         <div class="row">
           <div class="col-4">
